--- a/DirectXGame/DirectXGame.vcxproj.filters
+++ b/DirectXGame/DirectXGame.vcxproj.filters
@@ -22,6 +22,9 @@
     <ClCompile Include="Timer.cpp">
       <Filter>Utility</Filter>
     </ClCompile>
+    <ClCompile Include="App.cpp">
+      <Filter>App</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Window.h">
@@ -30,6 +33,9 @@
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Timer.h">
       <Filter>Utility</Filter>
+    </ClInclude>
+    <ClInclude Include="App.h">
+      <Filter>App</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
