--- a/DirectXGame/DirectXGame.vcxproj
+++ b/DirectXGame/DirectXGame.vcxproj
@@ -129,17 +129,31 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp" />
+    <ClCompile Include="Context.cpp" />
+    <ClCompile Include="Device.cpp" />
+    <ClCompile Include="FrameBuffer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Renderer.cpp" />
+    <ClCompile Include="ShaderManager.cpp" />
+    <ClCompile Include="SwapChain.cpp" />
     <ClCompile Include="Timer.cpp" />
+    <ClCompile Include="VertexBuffer.cpp" />
+    <ClCompile Include="ViewportManager.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h" />
+    <ClInclude Include="Context.h" />
+    <ClInclude Include="Device.h" />
+    <ClInclude Include="FrameBuffer.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="ShaderManager.h" />
+    <ClInclude Include="SwapChain.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Vertex.h" />
+    <ClInclude Include="VertexBuffer.h" />
+    <ClInclude Include="ViewportManager.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
