--- a/DirectXGame/DirectXGame.vcxproj
+++ b/DirectXGame/DirectXGame.vcxproj
@@ -132,7 +132,9 @@
     <ClCompile Include="Context.cpp" />
     <ClCompile Include="Device.cpp" />
     <ClCompile Include="FrameBuffer.cpp" />
+    <ClCompile Include="IndexBuffer.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MatrixBuffer.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="ShaderManager.cpp" />
     <ClCompile Include="SwapChain.cpp" />
@@ -146,6 +148,8 @@
     <ClInclude Include="Context.h" />
     <ClInclude Include="Device.h" />
     <ClInclude Include="FrameBuffer.h" />
+    <ClInclude Include="IndexBuffer.h" />
+    <ClInclude Include="MatrixBuffer.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="ShaderManager.h" />
