--- a/DirectXGame/DirectXGame.vcxproj.filters
+++ b/DirectXGame/DirectXGame.vcxproj.filters
@@ -28,6 +28,15 @@
     <Filter Include="Camera">
       <UniqueIdentifier>{432370c3-fc31-45a5-a23f-25d67b708a62}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Component">
+      <UniqueIdentifier>{86031b38-211c-4121-acee-657bb3016563}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resource">
+      <UniqueIdentifier>{f006e6bd-47b7-4d99-a451-000260503305}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Entity">
+      <UniqueIdentifier>{604a66b6-165a-4a78-b549-70146cbd2926}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -48,9 +57,6 @@
     <ClCompile Include="FrameBuffer.cpp">
       <Filter>GraphicsEngine\Buffer</Filter>
     </ClCompile>
-    <ClCompile Include="ShaderManager.cpp">
-      <Filter>GraphicsEngine\Shader</Filter>
-    </ClCompile>
     <ClCompile Include="IndexBuffer.cpp">
       <Filter>GraphicsEngine\Buffer</Filter>
     </ClCompile>
@@ -66,9 +72,6 @@
     <ClCompile Include="Context.cpp">
       <Filter>GraphicsEngine\Interface</Filter>
     </ClCompile>
-    <ClCompile Include="ViewportManager.cpp">
-      <Filter>GraphicsEngine\Viewport</Filter>
-    </ClCompile>
     <ClCompile Include="Window.cpp">
       <Filter>App</Filter>
     </ClCompile>
@@ -83,6 +86,33 @@
     </ClCompile>
     <ClCompile Include="Camera.cpp">
       <Filter>Camera</Filter>
+    </ClCompile>
+    <ClCompile Include="TransformComponent.cpp">
+      <Filter>Component</Filter>
+    </ClCompile>
+    <ClCompile Include="MeshComponent.cpp">
+      <Filter>Component</Filter>
+    </ClCompile>
+    <ClCompile Include="InputLayout.cpp">
+      <Filter>GraphicsEngine\Shader</Filter>
+    </ClCompile>
+    <ClCompile Include="VertexShader.cpp">
+      <Filter>GraphicsEngine\Shader</Filter>
+    </ClCompile>
+    <ClCompile Include="PixelShader.cpp">
+      <Filter>GraphicsEngine\Shader</Filter>
+    </ClCompile>
+    <ClCompile Include="Mesh.cpp">
+      <Filter>Resource</Filter>
+    </ClCompile>
+    <ClCompile Include="Material.cpp">
+      <Filter>Resource</Filter>
+    </ClCompile>
+    <ClCompile Include="MaterialComponent.cpp">
+      <Filter>Component</Filter>
+    </ClCompile>
+    <ClCompile Include="Viewport.cpp">
+      <Filter>GraphicsEngine\Viewport</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -105,9 +135,6 @@
     <ClInclude Include="FrameBuffer.h">
       <Filter>GraphicsEngine\Buffer</Filter>
     </ClInclude>
-    <ClInclude Include="ShaderManager.h">
-      <Filter>GraphicsEngine\Shader</Filter>
-    </ClInclude>
     <ClInclude Include="IndexBuffer.h">
       <Filter>GraphicsEngine\Buffer</Filter>
     </ClInclude>
@@ -122,9 +149,6 @@
     </ClInclude>
     <ClInclude Include="Context.h">
       <Filter>GraphicsEngine\Interface</Filter>
-    </ClInclude>
-    <ClInclude Include="ViewportManager.h">
-      <Filter>GraphicsEngine\Viewport</Filter>
     </ClInclude>
     <ClInclude Include="Window.h">
       <Filter>App</Filter>
@@ -146,6 +170,39 @@
     </ClInclude>
     <ClInclude Include="Camera.h">
       <Filter>Camera</Filter>
+    </ClInclude>
+    <ClInclude Include="Component.h">
+      <Filter>Component</Filter>
+    </ClInclude>
+    <ClInclude Include="TransformComponent.h">
+      <Filter>Component</Filter>
+    </ClInclude>
+    <ClInclude Include="MeshComponent.h">
+      <Filter>Component</Filter>
+    </ClInclude>
+    <ClInclude Include="InputLayout.h">
+      <Filter>GraphicsEngine\Shader</Filter>
+    </ClInclude>
+    <ClInclude Include="VertexShader.h">
+      <Filter>GraphicsEngine\Shader</Filter>
+    </ClInclude>
+    <ClInclude Include="PixelShader.h">
+      <Filter>GraphicsEngine\Shader</Filter>
+    </ClInclude>
+    <ClInclude Include="Mesh.h">
+      <Filter>Resource</Filter>
+    </ClInclude>
+    <ClInclude Include="Material.h">
+      <Filter>Resource</Filter>
+    </ClInclude>
+    <ClInclude Include="MaterialComponent.h">
+      <Filter>Component</Filter>
+    </ClInclude>
+    <ClInclude Include="Entity.h">
+      <Filter>Entity</Filter>
+    </ClInclude>
+    <ClInclude Include="Viewport.h">
+      <Filter>GraphicsEngine\Viewport</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
