--- a/DirectXGame/DirectXGame.vcxproj
+++ b/DirectXGame/DirectXGame.vcxproj
@@ -134,22 +134,19 @@
     <ClCompile Include="Context.cpp" />
     <ClCompile Include="Device.cpp" />
     <ClCompile Include="FrameBuffer.cpp" />
+    <ClCompile Include="GeometryUtil.cpp" />
     <ClCompile Include="IndexBuffer.cpp" />
     <ClCompile Include="InputLayout.cpp" />
     <ClCompile Include="InputSystem.cpp" />
     <ClCompile Include="Keyboard.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Material.cpp" />
     <ClCompile Include="MaterialComponent.cpp" />
-    <ClCompile Include="MatrixBuffer.cpp" />
-    <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="MeshComponent.cpp" />
     <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="PixelShader.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="SwapChain.cpp" />
     <ClCompile Include="Timer.cpp" />
-    <ClCompile Include="TransformComponent.cpp" />
     <ClCompile Include="VertexBuffer.cpp" />
     <ClCompile Include="VertexShader.cpp" />
     <ClCompile Include="Viewport.cpp" />
@@ -158,18 +155,25 @@
   <ItemGroup>
     <ClInclude Include="App.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="CameraBuffer.h" />
     <ClInclude Include="Component.h" />
+    <ClInclude Include="ConstantBuffer.h" />
     <ClInclude Include="Context.h" />
+    <ClInclude Include="Cube.h" />
     <ClInclude Include="Device.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="FrameBuffer.h" />
+    <ClInclude Include="GeometryUtil.h" />
     <ClInclude Include="IndexBuffer.h" />
     <ClInclude Include="IInputDevice.h" />
     <ClInclude Include="InputLayout.h" />
     <ClInclude Include="InputListener.h" />
     <ClInclude Include="InputSystem.h" />
     <ClInclude Include="Keyboard.h" />
+    <ClInclude Include="Light.h" />
+    <ClInclude Include="LightBuffer.h" />
     <ClInclude Include="Material.h" />
+    <ClInclude Include="MaterialBuffer.h" />
     <ClInclude Include="MaterialComponent.h" />
     <ClInclude Include="MatrixBuffer.h" />
     <ClInclude Include="Mesh.h" />
@@ -178,6 +182,8 @@
     <ClInclude Include="PixelShader.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="ShaderStage.h" />
+    <ClInclude Include="Icosahedron.h" />
     <ClInclude Include="SwapChain.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="TransformComponent.h" />
