--- a/DirectXGame/DirectXGame.vcxproj.filters
+++ b/DirectXGame/DirectXGame.vcxproj.filters
@@ -108,6 +108,15 @@
     <ClCompile Include="GeometryUtil.cpp">
       <Filter>Utility</Filter>
     </ClCompile>
+    <ClCompile Include="Material.cpp">
+      <Filter>Resource</Filter>
+    </ClCompile>
+    <ClCompile Include="Mesh.cpp">
+      <Filter>Resource</Filter>
+    </ClCompile>
+    <ClCompile Include="Light.cpp">
+      <Filter>Light</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Timer.h">
